# FizzRuzzt

./: Cargo.toml
src/: lib.rs  main.rs
src/game/: fizzbuzz.rs  mod.rs
